--- a/html/quiz.html
+++ b/html/quiz.html
@@ -6,6 +6,10 @@
     <title>My First HTML Page</title>
 </head>
 <body>
+    <nav>
+        <a href="images.html">Images</a>
+        <a href="../index.html">Quiz</a>
+    </nav>
     <h1>Hello, World!</h1>
     <p>This is a basic HTML page.</p>
 </body>
