--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First HTML Page</title>
+    <title>Recipe Central</title>
 </head>
+
 <body>
+    <nav>
+        <a href="html/images.html">Images</a>
+        <a href="html/quiz.html">Quiz</a>
+    </nav>
     <h1>Hello, World!</h1>
     <p>This is a basic HTML page.</p>
 </body>
