Adding navbar to all pages

--- a/html/images.html
+++ b/html/images.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First HTML Page</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/style.css">
+
+    <title>Image Gallery</title>
 </head>
 <body>
     <nav>
-        <a href="quiz.html">Images</a>
-        <a href="../index.html">Quiz</a>
+        <nav class="navigation">
+            <a href="../index.html" class="nav-item">Home</a>
+            <a href="quiz.html" class="nav-item">Quizes</a>
+            <a href="images.html" class="nav-item">Images</a>
+        </nav>
     </nav>
-    <h1>Hello, World!</h1>
-    <p>This is a basic HTML page.</p>
+    <h1>Image Gallery</h1>
+    <p></p>
 </body>
 </html>
