--- a/html/quiz.html
+++ b/html/quiz.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First HTML Page</title>
+    <title>Quiz</title>
+    <link rel="stylesheet" href="../css/style.css">
+
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
-    <nav>
-        <a href="images.html">Images</a>
-        <a href="../index.html">Quiz</a>
+    <nav class="navigation">
+        <a href="../index.html" class="nav-item">Home</a>
+        <a href="quiz.html" class="nav-item">Quizes</a>
+        <a href="images.html" class="nav-item">Images</a>
     </nav>
-    <h1>Hello, World!</h1>
+    <h1>Favorite food quiz</h1>
     <p>This is a basic HTML page.</p>
 </body>
 </html>
