--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Central</title>
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body>
-    <nav>
-        <a href="html/images.html">Images</a>
-        <a href="html/quiz.html">Quiz</a>
+    <nav class="navigation">
+        <a href="index.html" class="nav-item">Home</a>
+        <a href="./html/quiz.html" class="nav-item">Quizes</a>
+        <a href="./html/images.html" class="nav-item">Images</a>
     </nav>
-    <h1>Hello, World!</h1>
-    <p>This is a basic HTML page.</p>
+    <h1 class="headings">Hello, Foodie!</h1>
+    <p></p>
 </body>
 </html>
