Adding all images and content

--- a/html/images.html
+++ b/html/images.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../css/style.css">
 
     <title>Image Gallery</title>
@@ -17,6 +16,14 @@
         </nav>
     </nav>
     <h1>Image Gallery</h1>
-    <p></p>
+    <img src="../images/dinner.png">
+    <img src="../images/fastFood.webp">
+    <img src="../images/wastedFood.webp" alt="Image 3">
+    <img src="../images/healthy.png" alt="Image 4">
+    <img src="../images/inOut.jpeg" alt="Image 5">
+    <img src="../images/wontons.webp" alt="Image 6">
+    <img src="../images/pizza.png" alt="Image 7">
+    <img src="../images/plate.png" alt="Image 8">
+    <img src="../images/foodBowl.png" alt="Image 9">
 </body>
 </html>
