--- a/html/quiz.html
+++ b/html/quiz.html
@@ -6,7 +6,6 @@
     <title>Quiz</title>
     <link rel="stylesheet" href="../css/style.css">
 
-    <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
@@ -15,7 +14,21 @@
         <a href="quiz.html" class="nav-item">Quizes</a>
         <a href="images.html" class="nav-item">Images</a>
     </nav>
-    <h1>Favorite food quiz</h1>
-    <p>This is a basic HTML page.</p>
-</body>
+    <h1>Favorite Food Quiz</h1>
+
+    <form action="" method="post">
+        <label for="q1">What is your favorite type of cuisine?</label>
+        <input type="text" id="q1" name="q1" required>
+
+        <label for="q2">Do you prefer sweet or savory dishes?</label>
+        <select id="q2" name="q2" required>
+            <option value="sweet">Sweet</option>
+            <option value="savory">Savory</option>
+        </select>
+
+        <label for="q3">What is your go-to comfort food?</label>
+        <input type="text" id="q3" name="q3" required>
+
+        <button type="submit">Submit</button>
+    </form></body>
 </html>
