adding google analytics

--- a/html/quiz.html
+++ b/html/quiz.html
@@ -8,6 +8,15 @@
 
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5Q3G4W7BE0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5Q3G4W7BE0');
+</script>
 <body>
     <nav class="navigation">
         <a href="../index.html" class="nav-item">Home</a>
@@ -30,5 +39,6 @@
         <input type="text" id="q3" name="q3" required>
 
         <button type="submit">Submit</button>
-    </form></body>
+    </form>
+</body>
 </html>
