--- a/html/images.html
+++ b/html/images.html
@@ -7,6 +7,15 @@
 
     <title>Image Gallery</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5Q3G4W7BE0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5Q3G4W7BE0');
+</script>
 <body>
     <nav>
         <nav class="navigation">
