--- a/html/images.html
+++ b/html/images.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
 
     <title>Image Gallery</title>
-</head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5Q3G4W7BE0"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5Q3G4W7BE0"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'G-5Q3G4W7BE0');
-</script>
+        gtag('config', 'G-5Q3G4W7BE0');
+    </script>
+</head>
+
 <body>
     <nav>
         <nav class="navigation">
@@ -25,14 +27,15 @@
         </nav>
     </nav>
     <h1>Image Gallery</h1>
-    <img src="../images/dinner.png">
-    <img src="../images/fastFood.webp">
+    <img src="../images/dinner.png" alt="Image 1">
+    <img src="../images/fastFood.webp" alt="Image 2">
     <img src="../images/wastedFood.webp" alt="Image 3">
     <img src="../images/healthy.png" alt="Image 4">
-    <img src="../images/inOut.jpeg" alt="Image 5">
+    <img src="../images/idk.png" alt="Image 5">
     <img src="../images/wontons.webp" alt="Image 6">
     <img src="../images/pizza.png" alt="Image 7">
     <img src="../images/plate.png" alt="Image 8">
     <img src="../images/foodBowl.png" alt="Image 9">
 </body>
+
 </html>
