--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Central</title>
     <link rel="stylesheet" href="./css/style.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5Q3G4W7BE0"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
+        gtag('config', 'G-5Q3G4W7BE0');
+    </script>
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5Q3G4W7BE0"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-5Q3G4W7BE0');
-</script>
 
 <body>
     <nav class="navigation">
@@ -48,12 +48,13 @@
         necessary nutrients. The different types of food are mentioned below:
     </p>
     <ul>
-        <li><b>Vegetables and cereals: </b>These are rich in vitamins and minerals. Some of the vegetables are green leafy
+        <li><b>Vegetables and cereals: </b>These are rich in vitamins and minerals. Some of the vegetables are green
+            leafy
             vegetables, potatoes, carrots, beetroots, etc. Cereals and legumes are a great source of carbohydrates such
             as millets, corn, ragi, etc.
         </li>
-        <br>
-        <li><b>Fruits: </b>Fruits are also the main source of vitamins and minerals. For example, apples, oranges, grapes,
+        <li><b>Fruits: </b>Fruits are also the main source of vitamins and minerals. For example, apples, oranges,
+            grapes,
             kiwi, etc.
         </li>
     </ul>
