--- a/html/quiz.html
+++ b/html/quiz.html
@@ -26,7 +26,7 @@
     </nav>
     <h1>Favorite Food Quiz</h1>
 
-    <form action="formResponse.html" method="post">
+    <form action="./formResponse.html" >
         <fieldset>
 
             <label for="q1">What is your favorite type of cuisine?</label>
