Removed errorenous action from form

--- a/html/images.html
+++ b/html/images.html
@@ -26,7 +26,7 @@
             <a href="images.html" class="nav-item">Images</a>
         </nav>
     </nav>
-    <h1>Image Gallery</h1>
+    <h1><em>Image Gallery</em></h1>
     <img src="../images/dinner.png" alt="Image 1">
     <img src="../images/fastFood.webp" alt="Image 2">
     <img src="../images/wastedFood.webp" alt="Image 3">
