--- a/html/quiz.html
+++ b/html/quiz.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link rel="stylesheet" href="../css/style.css">
-    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-5Q3G4W7BE0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -24,9 +23,9 @@
         <a href="quiz.html" class="nav-item">Quizes</a>
         <a href="images.html" class="nav-item">Images</a>
     </nav>
-    <h1>Favorite Food Quiz</h1>
+    <h1><em>Favorite Food Quiz</em></h1>
 
-    <form action="./formResponse.html" >
+    <form method = "POST">
         <fieldset>
 
             <label for="q1">What is your favorite type of cuisine?</label>
