--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="./html/quiz.html" class="nav-item">Quizes</a>
         <a href="./html/images.html" class="nav-item">Images</a>
     </nav>
-    <h1 class="headings">Hello, Foodie!</h1>
+    <h1 class="headings"><em>Hello, Foodie!</em></h1>
     <p>
         Food is the essential source of nutrition required for growth and development of living organisms. It is
         basically a source of energy needed for organisms to grow and develop into mature individuals. Food contains
