form response filled

--- a/html/quiz.html
+++ b/html/quiz.html
@@ -25,7 +25,7 @@
     </nav>
     <h1><em>Favorite Food Quiz</em></h1>
 
-    <form method = "POST">
+    <form action="formResponse.html" method="POST">
         <fieldset>
 
             <label for="q1">What is your favorite type of cuisine?</label>
